detect mrz text

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bundle": "node_modules/.bin/browserify ./src/functions.js > ./dist/bundle.js",
     "babelify": "node_modules/.bin/browserify ./src/functions.js > ./dist/bundle.js -t babelify"
   },
-  "author": "",
+  "author": "Nathaniel Sebastian & Candice Ariel",
   "license": "ISC",
   "dependencies": {
     "browserify": "^17.0.0",
